--- a/templates/index.pug
+++ b/templates/index.pug
@@ -2,4 +2,18 @@ html
     head
         title= title
     body
-        h1= message
+        header
+            div(class="header")
+                div(class="brand")
+                    img(src="../images/workflow_128.png", alt="logo", id="logo")
+                nav
+                    div(class="menu")
+                        ul
+                            li Home
+                            li Templates
+                            li Version
+        section
+            div(class="main") oi
+        footer
+            div(class="footer") oi
+        link(rel="stylesheet", href="../css/style.css")
